Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Nov 18 16:20:10 1994  Theodore Y. Ts'o  (tytso@dcl)

	* destest.c (main): Add magic numbers to keyblock structure.

Tue Nov  8 17:57:47 1994  Theodore Y. Ts'o  (tytso@dcl)

	* des_int.h:
	  random_key.c (mit_des_random_key):
	  string2key.c (mit_des_string_to_key): Change
		internal calling signature to pass in the encryption
		block, so that the encryption type in the keyblock
		structure can be properly initialized.

Thu Nov  3 18:31:55 1994  Mark Eichin  (eichin@cygnus.com)

	* Makefile.in: stop building f_pcbc.c, since it belongs in
	libdes425, but leave it here for reference.

Fri Oct 14 00:33:17 1994  Theodore Y. Ts'o  (tytso@dcl)

	* des_int.h, f_cbc.c, verify.c: Fix function declarations to
		(slightly) better match the conventions used by the krb5
		source tree.

	* cs_entry.c: Remove declarations of the cryptosystem specific
		structures to raw-des.c and des-crc.c in the parent
		directory.  They're strictly speaking not DES specific.

	* Makefile.in: Remove file krb_glue.c; we don't use it any more.

Thu Oct  6 12:49:29 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Make sure the "make check" programs get cleaned up
		on a "make clean".

	* verify.c (main): Take out check that assures that long is 4
		bytes.  The DES implementation shouldn't be depending on
		this, and if it is, then that's what the verify program
		should be discovering, yes?

Thu Jun 23 01:09:33 1994  Tom Yu  (tlyu at dragons-lair)

	* cs_entry.c: oops typo in that last one

	* grrr.... ETYPE_DES_CBC_CRC really should be ETYPE_RAW_DES_CBC,
	although something like ETYPE_DES_CBC_RAW or ETYPE_DES_CBC_NONE
	would probably work better (following the convention
	ETYPE_{system}_{mode}_{integrity})
