@@ -29,11 +29,7 @@
  *
  */
 
-
-
-#include <krb5/krb5.h>
-#include <krb5/ext-proto.h>
-
+#include "k5-int.h"
 #include "des_int.h"
 
 /*
